--- a/index.html
+++ b/index.html
@@ -30,25 +30,30 @@
 	<a href="#" onclick="showContent('CW')">Creative Writing</a>
 </nav>
 	
-<section id="home">
+	
+<section id="home" class="active">
 	<h2>Home</h2>
 	<div class="text">
-		<p>Hello, I am Marguerite Paglierani!</p>
+		<p>Hello, I am Marguerite Paglierani!</p><br>
 
-		<p>I earned my degree in English from the University of Massachusetts in Lowell, graduating in the Fall of 2023. Now, I am embarking on a career in Graphic Design, with a focus on Web Design. Alongside this, I nurture a keen interest in Creative Writing and find joy in refining and editing works of fiction.</p>
+		<p>I earned my degree in English from the University of Massachusetts in Lowell, graduating in the Spring of 2024. Now, I am diving into a career in Marketing, using my Graphic Design and writing skills to create content that connects with audiences in meaningful ways.</p><br>
 
-		<p>Beyond academia, I find solace and inspiration in the realms of journaling, writing, and continuous learning. It's during the process of honing my writing skills and delving into coding languages that my passion and creativity truly thrive. Expressing myself through various mediums, including creative writing and graphic design, provides a vital outlet for my artistic endeavors.</p>
+		<p>When I’m not working on design, marketing, or writing, you’ll probably find me journaling, learning something new, or tinkering with coding languages. I thrive on creativity, whether it’s through storytelling, design, or exploring new skills.</p><br>
 
-		<p>This virtual portfolio showcases not only my resume, but also some of my most significant graphic design projects and original creative writing. For a deeper dive into my coding projects, you can also explore my GitHub linked below!</p>
+		<p>This portfolio is a mix of my resume, graphic design projects, and original writing. If you’re curious about my coding work, check out my GitHub linked in the footer below!</p><br>
 
 		<p>Please, enjoy!</p>
 	</div>
+	<br>
+	<br>
 </section>
 
+	
 <section id="resume">
 	<h2>Resume</h2>
-	<embed src="resume2024.pdf" type="application/pdf">
+	<embed src="resume2025.pdf" type="application/pdf">
 </section>
+	
 
 <section id="GRFX">
 	<h2>Graphic Design</h2>
@@ -70,26 +75,38 @@
 		<p>Embracing a vibrant palette dominated by shades of oranges and blues, I crafted unique graphics to accompany the exploration of this captivating font. The intention was to seamlessly intertwine visual appeal with insightful information, offering a delightful and immersive experience into the world of Sansita."</p>
 	</div>
 	<embed src="type-specimen.pdf" type="application/pdf">
+	
+	<br>
+	<br>
+	
+	<div class="text">
+		<h3>App Redesign</h3>
+		<p>For this project, I redesigned Cash App with a focus on improving user experience and interactivity. My goal was to maintain the core elements that make Cash App stand out from other money transfer apps while introducing features that users find most valuable.</p><br>
+		<p>I created both light and dark mode versions, incorporating accent colors to highlight key areas and improve usability. Rather than a complete rebrand, I aimed to enhance the existing design by addressing common user concerns, including feedback from my classmates. The result is a refined, more intuitive interface that builds on Cash App’s strengths while making it even more user-friendly.</p>
+	</div>
+	<embed src="cashapp-redesign.pdf" type="application/pdf">
+	
 	<br>
 	<br>
 	<br>
 
 </section>
+	
 
-<section id="CW"  class="active">
+<section id="CW">
 	<h2>Creative Writing</h2>
 	
 	<div class="text">
 		<h3>Girls</h3>
 		<p><i>Short Story</i></p>
 	</div>
-	<embed src="girls" type="application/pdf">
+	<embed src="girls.pdf" type="application/pdf">
 	
 	<div class="text">
 		<h3>Passenger</h3>
 		<p><i>Short Story</i></p>
 	</div>
-	<embed src="passenger" type="application/pdf">
+	<embed src="passenger.pdf" type="application/pdf">
 	
 	<br><br><br>
 	
@@ -97,6 +114,7 @@
 
 	
 </div>	
+	
 	
 	
 <div class="footer">
